--- a/css/lightbox.css
+++ b/css/lightbox.css
@@ -37,7 +37,7 @@ body.lb-disable-scrolling {
   border-radius: 3px;
 
   /* Image border */
-  border: 4px solid white;
+  border: 4px solid rgb(88, 189, 74);
 }
 
 .lightbox a img {
