--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@
 
 .blog-header {
   line-height: 1;
-  border-bottom: 1px solid #e5e5e5;
+  border-bottom: 1px solid #99ffcc;
 }
 
 .blog-header-logo {
@@ -238,4 +238,22 @@ img{
 .img-item{
       padding: 20px;
 
+}
+.bg-modal {
+  width: 100%;
+  height: 100%;
+  background-color:rgba(0,0,0,0,0.7); /*use rgba, a being the opacity channel, to avoid the child inheriting the "opacity: 0.7" trait*/
+  position: absolute;
+  top: 0;
+  display: flex;
+  justify-content: center; /*quick horizontal centering (justification)*/
+  align-items: center; /*quick vertical cemteromg (alignment)*/
+}
+.modal-content {
+  width: 500px;
+  height: 300px;
+  background-color: white;
+  border-radius: 4px;
+
+  
 }
